--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".controller.HistoricActivity"></activity>
-        <activity android:name=".controller.MainActivity">
+        <activity android:name=".historic.HistoricActivity"></activity>
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".controller.MainControllers.AlarmReceiver"
+        <receiver android:name=".main.controllers.AlarmReceiver"
             android:enabled="true"
             android:exported="true">
         </receiver>
