fixing lines of historic sizes, font size and comment button position in the historic for low dpi devices, and general refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activities.HistoricActivity"></activity>
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".controllers.HistoricActivity"></activity>
+        <activity android:name=".controllers.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".core.controllers.AlarmReceiver"
+        <receiver android:name=".controllers.AlarmReceiver"
             android:enabled="true"
             android:exported="true">
         </receiver>
